# PRAMA-Protokol

./: .gitignore  ANOMALIES.md  README.md  RELEASE_V0_3_0.md  SPECIFICATION.md
PRAMA-Protokol-py/: EQUIVALENCE.md  README.md  pyproject.toml
PRAMA-Protokol-py/examples/: synthetic_demo.py
PRAMA-Protokol-py/src/prama_protokol/: __init__.py  compliance.py  compliance_legacy.py  interface.py  kernel.py  kernel_v3.py
PRAMA-Protokol-py/tests/: golden_gamma.npz  test_compliance.py  test_equivalence.py  test_kernel.py  test_kernel_v3.py
PRAMA-Protokol-rs/: BLUEPRINT_AGUA_MONTERREY.md  Cargo.toml  EQUIVALENCE-RS.md  README.md
PRAMA-Protokol-rs/examples/: v3_golden.rs
PRAMA-Protokol-rs/src/: lib.rs  main.rs  v3.rs
PRAMA-Protokol-rs/tests/: equivalence_vs_python.py  kernel_tests.rs  v3_vectors.rs
results/: v0_3_0_numeric_recertification.json
scripts/: certify_v0_3_0.py
tests/data/: generate_v0_3_golden_vectors_v2.py  v0_3_golden_vectors_v1.json  v0_3_golden_vectors_v2.json
