[project]
name = "prama-protokol"
version = "0.2.1"
description = "PRAMA Protokol — universal aptadynamic projection kernel: structural viability evaluation from observable behavior alone (AS-1)"
requires-python = ">=3.10"
dependencies = ["pandas>=2.0", "numpy>=1.24"]
license = "AGPL-3.0-only"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
