[project]
name = "prama-protokol"
version = "0.3.0"
description = "Universal domain-blind kernel for structural viability projection from observable behavior"
requires-python = ">=3.10"
dependencies = ["pandas>=2.0", "numpy>=1.24"]
license = "AGPL-3.0-only"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
