[package]
name = "prama-protokol-rs"
version = "0.2.0"
edition = "2021"
description = "PRAMA Protokol — Rust production core of the universal aptadynamic projection kernel (AS-1). Equivalence-certified against the validated Python reference."
license = "AGPL-3.0-only"

[[bin]]
name = "prama-project"
path = "src/main.rs"

[lib]
name = "prama_protokol"
path = "src/lib.rs"

[profile.release]
lto = true
