[package]
name = "prama-protokol-rs"
version = "0.3.0"
edition = "2021"
description = "Rust batch, streaming and CLI implementation of the universal PRAMA Protokol kernel"
license = "AGPL-3.0-only"

[[bin]]
name = "prama-project"
path = "src/main.rs"

[lib]
name = "prama_protokol"
path = "src/lib.rs"

[profile.release]
lto = true

[dev-dependencies]
serde_json = "=1.0.149"
